fix(bautajs-express-example): add service example
fix(bautajs-fastify-example): add service example

this is to showcase the cancellation of requests
